glyph grid mobile overflow fix v2

--- a/src/index.css
+++ b/src/index.css
@@ -1118,31 +1118,28 @@ button:disabled { cursor: default; }
 
 .glyph-overview__cell {
   aspect-ratio: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   font-size: 9cqi;
   cursor: default;
   user-select: none;
-  padding: 3px;
 }
 
-.glyph-overview__cell:nth-child(6n+1) { padding-left: 0; }
-.glyph-overview__cell:nth-child(6n)   { padding-right: 0; }
-.glyph-overview__cell:nth-child(-n+6) { padding-top: 0; }
-.glyph-overview__cell:nth-last-child(-n+6) { padding-bottom: 0; }
-
 .glyph-overview__cell > span {
+  position: absolute;
+  inset: 3px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  height: 100%;
   background: var(--gray-1);
   border-radius: 10px;
   transform: scale(1);
   transition: background 0.1s, transform 0.1s 0.1s;
 }
+
+.glyph-overview__cell:nth-child(6n+1) > span { left: 0; }
+.glyph-overview__cell:nth-child(6n)   > span { right: 0; }
+.glyph-overview__cell:nth-child(-n+6) > span { top: 0; }
+.glyph-overview__cell:nth-last-child(-n+6) > span { bottom: 0; }
 
 .glyph-overview__cell:hover > span {
   background: var(--gray-2);
